feat(cli): enabled eslint fixing for template

--- a/packages/cli/src/actions/templates/init/client/client/index.ts.template.ejs
+++ b/packages/cli/src/actions/templates/init/client/client/index.ts.template.ejs
@@ -1,17 +1,9 @@
-<% if (useClassTransformer) { %>
-import 'reflect-metadata';
-
-<% } %>
-<% if (withReact) { %>
-import '@proedis/react-client';
-
-<% } %>
+<% if (useClassTransformer) { %> import 'reflect-metadata'; <% } %>
+<% if (withReact) { %> import '@proedis/react-client'; <% } %>
 <% if (asGeaClient) { %>
 import { GeaAuthenticatedClient, RequestError } from '@proedis/client';
-
 <% } else { %>
 import { ClientBuilder, RequestError } from '@proedis/client';
-
 <% } %>
 
 /* --------
