fix(cli): adjusted imports

--- a/packages/cli/src/actions/templates/scaffold/enums/constants/shared-objects.ts.template.ejs
+++ b/packages/cli/src/actions/templates/scaffold/enums/constants/shared-objects.ts.template.ejs
@@ -6,8 +6,7 @@ import type { ComboboxItem } from '@mantine/core';
 
 import * as sharedObjectsCollection from './enums';
 
-import type { SharedObject } from '../interfaces/shared-objects';
-import type { SharedObjectName } from '../interfaces/shared-objects';
+import type { SharedObject, SharedObjectName } from '../interfaces/shared-objects';
 import type { ComposedSharedObjects } from '../interfaces/enums';
 
 
