fix(modeler): name of the shared object collections

--- a/packages/cli/src/actions/templates/scaffold/enums/constants/shared-objects.icons.ts.template.ejs
+++ b/packages/cli/src/actions/templates/scaffold/enums/constants/shared-objects.icons.ts.template.ejs
@@ -14,7 +14,7 @@ type SharedObjectsIcons = {
 /* --------
  * Exports
  * -------- */
-const sharedObjectsColors: SharedObjectsIcons = {
+const sharedObjectsIcons: SharedObjectsIcons = {
 <% sharedObjects.forEach(function (s) { %>
   <%- s.name %>: {
   <% s.values.forEach(function (value) { %>
@@ -23,4 +23,4 @@ const sharedObjectsColors: SharedObjectsIcons = {
 <% }) %>
 };
 
-export default sharedObjectsColors;
+export default sharedObjectsIcons;
